Name changed to Zowifier

--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
       method  = "post"
 >
 <input type="file" name="userFile" />
-<input type="submit" value="Zowificate!" name="submit">
+<input type="submit" value="Zowify!" name="submit">
 </form>
