Mini web interface implemented

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,21 @@
+<center>
 
+<h1>bq Zowifier</h1>
+<h3>Proof of concept</h3>
+
+<img src="./img/zowi-head.png">
+
+<p>&nbsp;</p>
+
+<h4>1. Scale and center your STL with Cura</h4>
+
+<img src="./img/cura.png">
+
+<p>NOTE: Hole is aprox 80x80x80 mm</p>
+
+<h4>2. Select your STL file and press Zowify!</h4>
+
+<p>A zip file with all the parts will be downloaded</p>
 
 <form id      = "uploadForm"
       enctype = "multipart/form-data"
@@ -6,5 +23,11 @@
       method  = "post"
 >
 	<input type="file" name="userFile" />
-	<input type="submit" value="Zowify!" name="submit">
+	<input type="submit" value="Zowify" name="submit">
 </form>
+
+<h4>3. Print your Zowi parts and enjoy!</h4>
+
+<img src="./img/zowi-vader.png">
+
+</center>
